/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package activity

import (
	"context"
	"testing"

	"github.com/google/uuid"
	cClient "github.com/nvidia/bare-metal-manager-rest/site-workflow/pkg/grpc/client"
	cwssaws "github.com/nvidia/bare-metal-manager-rest/workflow-schema/schema/site-agent/workflows/v1"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/mock"
	tmocks "go.temporal.io/sdk/mocks"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

func TestManageSSHKeyGroupInventory_DiscoverSSHKeyGroupInventory(t *testing.T) {
	mockCarbide := cClient.NewMockCarbideClient()

	carbideAtomicClient := cClient.NewCarbideAtomicClient(&cClient.CarbideClientConfig{})
	carbideAtomicClient.SwapClient(mockCarbide)

	wid := "test-workflow-id"
	wrun := &tmocks.WorkflowRun{}
	wrun.On("GetID").Return(wid)

	type fields struct {
		siteID               uuid.UUID
		carbideAtomicClient  *cClient.CarbideAtomicClient
		temporalPublishQueue string
		sitePageSize         int
		cloudPageSize        int
	}
	type args struct {
		wantTotalItems int
		findIDsError   error
	}
	tests := []struct {
		name   string
		fields fields
		args   args
	}{
		{
			name: "test collecting and publishing ssh key group inventory, empty inventory",
			fields: fields{
				siteID:               uuid.New(),
				carbideAtomicClient:  carbideAtomicClient,
				temporalPublishQueue: "test-queue",
				sitePageSize:         100,
				cloudPageSize:        25,
			},
			args: args{
				wantTotalItems: 0,
			},
		},
		{
			name: "test collecting and publishing ssh key group inventory, normal inventory",
			fields: fields{
				siteID:               uuid.New(),
				carbideAtomicClient:  carbideAtomicClient,
				temporalPublishQueue: "test-queue",
				sitePageSize:         100,
				cloudPageSize:        25,
			},
			args: args{
				wantTotalItems: 195,
			},
		},
		{
			name: "test collecting and publishing ssh key group inventory fallback, empty inventory",
			fields: fields{
				siteID:               uuid.New(),
				carbideAtomicClient:  carbideAtomicClient,
				temporalPublishQueue: "test-queue",
				sitePageSize:         100,
				cloudPageSize:        25,
			},
			args: args{
				wantTotalItems: 0,
				findIDsError:   status.Error(codes.Unimplemented, "not implemented"),
			},
		},
		{
			name: "test collecting and publishing ssh key group inventory fallback, normal inventory",
			fields: fields{
				siteID:               uuid.New(),
				carbideAtomicClient:  carbideAtomicClient,
				temporalPublishQueue: "test-queue",
				sitePageSize:         100,
				cloudPageSize:        25,
			},
			args: args{
				wantTotalItems: 195,
				findIDsError:   status.Error(codes.Unimplemented, "not implemented"),
			},
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			tc := &tmocks.Client{}
			tc.Mock.On("ExecuteWorkflow", mock.Anything, mock.AnythingOfType("internal.StartWorkflowOptions"),
				mock.AnythingOfType("string"), mock.AnythingOfType("uuid.UUID"), mock.Anything).Return(wrun, nil)
			tc.AssertNumberOfCalls(t, "ExecuteWorkflow", 0)

			manageInstance := NewManageSSHKeyGroupInventory(ManageInventoryConfig{
				SiteID:                tt.fields.siteID,
				CarbideAtomicClient:   tt.fields.carbideAtomicClient,
				TemporalPublishClient: tc,
				TemporalPublishQueue:  tt.fields.temporalPublishQueue,
				SitePageSize:          tt.fields.sitePageSize,
				CloudPageSize:         tt.fields.cloudPageSize,
			})

			ctx := context.Background()
			ctx = context.WithValue(ctx, "wantCount", tt.args.wantTotalItems)
			if tt.args.findIDsError != nil {
				ctx = context.WithValue(ctx, "wantError", tt.args.findIDsError)
			}

			totalPages := tt.args.wantTotalItems / tt.fields.cloudPageSize
			if tt.args.wantTotalItems%tt.fields.cloudPageSize > 0 {
				totalPages++
			}

			err := manageInstance.DiscoverSSHKeyGroupInventory(ctx)
			assert.NoError(t, err)

			if tt.args.wantTotalItems == 0 {
				tc.AssertNumberOfCalls(t, "ExecuteWorkflow", 1)
			} else {
				tc.AssertNumberOfCalls(t, "ExecuteWorkflow", totalPages)
			}

			inventory, ok := tc.Calls[0].Arguments[4].(*cwssaws.SSHKeyGroupInventory)
			assert.True(t, ok)

			if tt.args.wantTotalItems == 0 {
				assert.Equal(t, 0, len(inventory.TenantKeysets))
			} else {
				assert.Equal(t, tt.fields.cloudPageSize, len(inventory.TenantKeysets))
			}

			assert.Equal(t, cwssaws.InventoryStatus_INVENTORY_STATUS_SUCCESS, inventory.InventoryStatus)
			assert.Equal(t, totalPages, int(inventory.InventoryPage.TotalPages))
			assert.Equal(t, 1, int(inventory.InventoryPage.CurrentPage))
			assert.Equal(t, tt.fields.cloudPageSize, int(inventory.InventoryPage.PageSize))
			assert.Equal(t, tt.args.wantTotalItems, int(inventory.InventoryPage.TotalItems))
			assert.Equal(t, tt.args.wantTotalItems, len(inventory.InventoryPage.ItemIds))
		})
	}
}

func TestManageSSHKeyGroup_CreateSSHKeyGroupOnSite(t *testing.T) {
	mockCarbide := cClient.NewMockCarbideClient()

	carbideAtomicClient := cClient.NewCarbideAtomicClient(&cClient.CarbideClientConfig{})
	carbideAtomicClient.SwapClient(mockCarbide)

	orgID := "m4jjok8wsg"

	type fields struct {
		CarbideAtomicClient *cClient.CarbideAtomicClient
	}
	type args struct {
		ctx     context.Context
		request *cwssaws.CreateTenantKeysetRequest
	}
	tests := []struct {
		name    string
		fields  fields
		args    args
		wantErr bool
	}{
		{
			name: "test create SSH Key Group success",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.CreateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
					Version: "1209381123445",
				},
			},
			wantErr: false,
		},
		{
			name: "test create SSH Key Group fails on missing org ID",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.CreateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: "",
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
					Version: "1209381123445",
				},
			},
			wantErr: true,
		},
		{
			name: "test create SSH Key Group fails on missing source keyset id",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.CreateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "",
					},
					Version: "1209381123445",
				},
			},
			wantErr: true,
		},
		{
			name: "test create SSH Key Group fails on missing version",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.CreateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
					Version: "",
				},
			},
			wantErr: true,
		},
		{
			name: "test create SSH Key Group fails on missing request",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx:     context.Background(),
				request: nil,
			},
			wantErr: true,
		},
	}
	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			mt := NewManageSSHKeyGroup(tt.fields.CarbideAtomicClient)
			err := mt.CreateSSHKeyGroupOnSite(tt.args.ctx, tt.args.request)
			if tt.wantErr {
				assert.Error(t, err)
			} else {
				assert.NoError(t, err)
			}
		})
	}
}

func TestManageSSHKeyGroup_UpdateSSHKeyGroupOnSite(t *testing.T) {
	mockCarbide := cClient.NewMockCarbideClient()

	carbideAtomicClient := cClient.NewCarbideAtomicClient(&cClient.CarbideClientConfig{})
	carbideAtomicClient.SwapClient(mockCarbide)

	orgID := "m4jjok8wsg"

	type fields struct {
		CarbideAtomicClient *cClient.CarbideAtomicClient
	}
	type args struct {
		ctx     context.Context
		request *cwssaws.UpdateTenantKeysetRequest
	}
	tests := []struct {
		name    string
		fields  fields
		args    args
		wantErr bool
	}{
		{
			name: "test update SSH Key Group success",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.UpdateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
					Version: "1209381123445",
				},
			},
			wantErr: false,
		},
		{
			name: "test update SSH Key Group fails on missing org ID",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.UpdateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: "",
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
					Version: "1209381123445",
				},
			},
			wantErr: true,
		},
		{
			name: "test update SSH Key Group fails on missing keyset id",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.UpdateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "",
					},
					Version: "1209381123445",
				},
			},
			wantErr: true,
		},
		{
			name: "test update SSH Key Group fails on missing version",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.UpdateTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
					Version: "",
				},
			},
			wantErr: true,
		},
		{
			name: "test update SSH Key Group fails on missing request",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx:     context.Background(),
				request: nil,
			},
			wantErr: true,
		},
	}
	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			mt := NewManageSSHKeyGroup(tt.fields.CarbideAtomicClient)
			err := mt.UpdateSSHKeyGroupOnSite(tt.args.ctx, tt.args.request)
			if tt.wantErr {
				assert.Error(t, err)
			} else {
				assert.NoError(t, err)
			}
		})
	}
}

func TestManageSSHKeyGroup_DeleteSSHKeyGroupOnSite(t *testing.T) {
	mockCarbide := cClient.NewMockCarbideClient()

	carbideAtomicClient := cClient.NewCarbideAtomicClient(&cClient.CarbideClientConfig{})
	carbideAtomicClient.SwapClient(mockCarbide)

	orgID := "m4jjok8wsg"

	type fields struct {
		CarbideAtomicClient *cClient.CarbideAtomicClient
	}
	type args struct {
		ctx     context.Context
		request *cwssaws.DeleteTenantKeysetRequest
	}
	tests := []struct {
		name    string
		fields  fields
		args    args
		wantErr bool
	}{
		{
			name: "test delete SSH Key Group success",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.DeleteTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
				},
			},
			wantErr: false,
		},
		{
			name: "test delete SSH Key Group fails on missing org ID",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.DeleteTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: "",
						KeysetId:       "547f73dc-16e6-4cc0-a0c1-3911dbc2aec3",
					},
				},
			},
			wantErr: true,
		},
		{
			name: "test delete SSH Key Group fails on missing keyset ID",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx: context.Background(),
				request: &cwssaws.DeleteTenantKeysetRequest{
					KeysetIdentifier: &cwssaws.TenantKeysetIdentifier{
						OrganizationId: orgID,
						KeysetId:       "",
					},
				},
			},
			wantErr: true,
		},
		{
			name: "test delete SSH Key Group fails on missing request",
			fields: fields{
				CarbideAtomicClient: carbideAtomicClient,
			},
			args: args{
				ctx:     context.Background(),
				request: nil,
			},
			wantErr: true,
		},
	}
	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			mt := NewManageSSHKeyGroup(tt.fields.CarbideAtomicClient)
			err := mt.DeleteSSHKeyGroupOnSite(tt.args.ctx, tt.args.request)
			if tt.wantErr {
				assert.Error(t, err)
			} else {
				assert.NoError(t, err)
			}
		})
	}
}
